added some text and changed colors

--- a/style.css
+++ b/style.css
@@ -16,19 +16,25 @@ body {
   padding: 0 3rem;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: 240;
   margin: 0.4rem;
 }
 
 h1 {
   font-size: 3rem;
-  color: rgb(241, 224, 224);
+  color: #e8faff;
 }
 
 h2 {
   font-size: 2rem;
-  color: rgb(199, 193, 193);
+  color: #b6d0db;
+}
+
+h3 {
+  font-size: 1rem;
+  color: #7ec6e2;
+  margin-top: 1rem;
 }
 
 @media(min-width: 1200px) {
