--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ h3 {
   margin-top: 1rem;
 }
 
+/* Cursor */
+.txt-type > .txt {
+  border-right: 0.22rem solid #7d93a8;
+}
+
 @media(min-width: 1200px) {
   h1 {
     font-size: 3.7rem;
